# pdf_parser

./: README.md  parse_pdf_plumber.py  pretrain.py  pyproject.toml  summarize.py
config/: alphard_navi_201501_spcodes.json  harrier_navi_201706_spcodes.json
src/data/: __init__.py  data_collator.py  page_data.py
src/models/: __init__.py  seq2seq.py  t5.py
src/parser/: coord_trans.py  image_saver.py  page_parser.py  specical_char_handler.py  table_extractor.py  visual_debug.py
src/preprocessor/: normalization.py
src/utils/: reader.py  utils.py  writer.py
