[tool.poetry]
name = "test_case_generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.18.3"
numpy = "^1.21.0"
matplotlib = "^3.4.3"
Pillow = "^8.4.0"
PyMuPDF = "^1.19.0"
pdf2image = "^1.16.0"
pdfplumber = "^0.5.28"
poppler-utils = "^0.1.0"
mlflow = "^1.20.2"
jupyterlab = "^3.2.1"
ipykernel = "^6.4.2"
neologdn = "^0.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
